# FlintOS

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.claude/: AGENT_SKILL_PLAN.md
.claude/commands/: common-installer-demo.md  scrum-align.md
.github/workflows/: ci.yml
cmake/: FlintESPJVM.cmake
docs/architecture/: ADR-0001-java-native-flintos.md  FlintOS-system-design.md  MICROPYTHONOS_REFERENCE_ALIGNMENT.md  PROCESS_FLOW.md  ROADMAP.md  TESTING_STRATEGY.md
docs/architecture/diagrams/: 01_boot_flow.mmd  02_app_launch_flow.mmd  03_java_native_api_call_flow.mmd  04_app_registry_manifest_flow.mmd  05_package_install_flow.mmd  06_ota_update_flow.mmd  07_testing_ci_hil_flow.mmd  08_overall_architecture_flow.mmd  09_sprint_002_runtime_foundation_flow.mmd  10_build_runtime_image_flow.mmd
docs/scrum/: PRODUCT_BACKLOG.md  SPRINT_001.md
java/modules/flint.app/: module-info.java
java/modules/flint.app/flint/app/: Activity.java  AppContext.java  AppEvent.java  AppInfo.java  AppManager.java  AppManifest.java  AppResult.java  FlintApp.java  Intent.java  Permission.java
java/modules/flint.io/: module-info.java
java/modules/flint.io/flint/io/: I2C.java  Pin.java  SPI.java
java/modules/flint.net/: module-info.java
java/modules/flint.net/flint/net/: WiFi.java
java/modules/flint.os/: module-info.java
java/modules/flint.os/flint/os/: DownloadManager.java  Logger.java  Power.java  Settings.java  Storage.java  SystemInfo.java  TaskManager.java  UpdateManager.java
java/modules/flint.ui/: module-info.java
java/modules/flint.ui/flint/ui/: Button.java  Color.java  Dialog.java  Font.java  Input.java  KeyEvent.java  Label.java  ListView.java  Screen.java  TextInput.java  TouchEvent.java  VirtualKeyboard.java  Widget.java
java/system_apps/app_store/: app.json
java/system_apps/app_store/src/flintos.appstore/: module-info.java
java/system_apps/app_store/src/flintos.appstore/flintos/appstore/: AppStoreApp.java
java/system_apps/diagnostics/: app.json
java/system_apps/diagnostics/src/flintos.diagnostics/: module-info.java
java/system_apps/diagnostics/src/flintos.diagnostics/flintos/diagnostics/: DiagnosticsApp.java
java/system_apps/file_manager/: app.json
java/system_apps/file_manager/src/flintos.filemanager/: module-info.java
java/system_apps/launcher/: app.json
java/system_apps/launcher/src/flintos.launcher/: module-info.java
java/system_apps/music/: app.json
java/system_apps/music/src/flintos.music/: module-info.java
java/system_apps/settings/: app.json
java/system_apps/settings/src/flintos.settings/: module-info.java
java/system_apps/updater/: app.json
java/system_apps/updater/src/flintos.updater/: module-info.java
main/: CMakeLists.txt  flintos_main.cpp
native/core/: app_manager_native.cpp  app_manager_native.hpp  app_manifest.cpp  app_manifest.hpp  app_registry.cpp  app_registry.hpp  boot_manager.cpp  boot_manager.hpp  download_manager.cpp  download_manager.hpp  input_event_dispatcher.cpp  input_event_dispatcher.hpp  logger.cpp  logger.hpp  ota_update_manager.cpp  ota_update_manager.hpp  package_manager.cpp  package_manager.hpp  permission_manager.cpp  permission_manager.hpp  service_registry.cpp  service_registry.hpp  settings_store.cpp  settings_store.hpp  storage_service.cpp  storage_service.hpp  task_manager.cpp  task_manager.hpp
native/hal/: audio_driver.cpp  audio_driver.hpp  board_profile.cpp  board_profile.hpp  boot_sound.cpp  display_driver.cpp  display_driver.hpp  input_driver.cpp  input_driver.hpp  music_sound.cpp  network_driver.cpp  network_driver.hpp  power_manager.cpp  power_manager.hpp
native/jvm_bridge/: flintjvm_host.cpp  flintjvm_host.hpp  flintos_flint_native.cpp  native_bindings.cpp  native_bindings.hpp
partitions/: esp32s3.csv
tests/fixtures/: hil_boot_matrix.json
tests/scripts/: check_no_python_runtime.py  check_packages.py  hil_runner.py  serial_monitor.py  validate_all_manifests.py
tools/: build_java_modules.py  build_runtime_image.py  convert_boot_sound.py  package_app.py  validate_manifest.py
(+5 files in other folders)
